...
                android:layout_marginTop="25dp"
                android:text="@string/qu_quieres_hacer_hoy"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnAddArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:backgroundTint="#01579B"
                android:minWidth="200dp"
...
